[package]
name = "rawk"
version = "0.1.0"
authors = ["Ryan Waskiewicz <ryanwaskiewicz@gmail.com>"]
rust-version = "1.66.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.8"
env_logger = "0.10.0"
log = "0.4.17"
rustyline = "10.1.0"

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "2.1.5"
