[package]
name = "rawk"
version = "0.1.0"
authors = ["Ryan Waskiewicz <ryanwaskiewicz@gmail.com>"]
rust-version = "1.68.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.14"
env_logger = "0.10.0"
log = "0.4.19"
rustyline = "12.0.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
