[package]
name = "rawk"
version = "0.1.0"
authors = ["Ryan Waskiewicz <ryanwaskiewicz@gmail.com>"]
rust-version = "1.68.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.14"
env_logger = "0.10.2"
log = "0.4.21"
rustyline = "13.0.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.0"
